Correct wrap big folder names in sidebar

--- a/snf-ui/app/styles/_dir-tree.scss
+++ b/snf-ui/app/styles/_dir-tree.scss
@@ -6,7 +6,7 @@
     li {
         font-size: rem-calc(14);
         list-style: none outside none;
-        word-break: break-word;
+        word-break: break-all;
     }
     .fa-share-alt {
         font-size: rem-calc(16);
